src/app/core/common/sortable/table.sortable.component.css
tbody td, thead th {
    /*width: 30.9%;*/ /*please override this value in parent component for using different nuber of coluns. 30.9 is for 4 columns*/
    float: left;
}

table {
    margin-right: 0.5%;
    margin-left: 0.5%;
    width: 99%;
    border-right: 0.001rem solid silver;
}


th {
    color: white;
    font-family: Roboto;
    font-size: 16px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #ffffff;
}

.table-header {
    background-color: #6e8298;
}

.table-buttons {
    width: 2.3rem;
}

.table-container {
    margin-left: 2rem;
    width: 95%; 
    overflow: scroll;
    overflow-y: hidden;
}

thead, tbody, tr, td, th { display: block; }

tr:after {
    content: ' ';
    display: block;
    visibility: hidden;
    clear: both;
}

thead th {
    height: 50px;
    text-align: left;
}

tbody {
    height: 23rem;
    overflow-y: auto;
}

tbody td {
    border-right: 0.001rem solid silver;
    height: 6.1rem;
    overflow-y: auto;
}

tbody td:first-child, thead th:first-child {
    width: 4.3rem;
    border-left: 0.001rem solid silver;
}

.show-more {
    margin-left: 3rem;
}

.arrows {
    position:relative;
    margin-left: 1rem;
}

.silver-arrow {
    position:absolute;
    left: 0;
    top: 0.3rem;
}

.silver-dropdowns-container {
    position:relative;
    margin-right: 0rem;
    margin-bottom: 0rem;
    float: right;
    width: 2rem;
    height: 2rem;
}

.silver-dropdown {
    position:absolute;
    right: 0.5rem;
    bottom: 0.5rem;
}

